--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             <tr>
                             
                                 <td>Lal Miah Messer	</td>
-                                <td class="text-center"><span class="fw-bolder">15-FEB-2024</span>  & 16-April-2024 </td>
+                                <td class="text-center"><span class="fw-bolder">15-FEB-2024</span><i class="fa-regular fa-plane"></i> 16-April-2024 </td>
                                 <td class="text-center">401814</td>
                                 <td class="text-center">2237342916</td>
                                 <td class="bg-succech text-center">  Normal</td>
@@ -201,7 +201,7 @@
                                 <td class="text-center">2493550483</td>
                                 <td class="bg-succech text-center">Normal</td>
                                 <td class="text-center">60 Days</td>
-                                <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/405529.pdf">Download</a></button></td>
+                                <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/405529.p">Download</a></button></td>
 
                             </tr>
 
