--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 
                             <tr>
                                 <td><span class="iconS m-2"><i class="fa-solid fa-circle-check"></i></span>Shafiqui Houssin</td>
-                                <td class="text-center"><span class="fw-bolder">03-Feb-2024</span>  & 23-Feb-2024 </td>
+                                <td class="text-center"><span class="fw-bolder">03-Feb-2024</span> <span class="iconS"><i class="fa-regular fa-paper-plane"></i></span> 23-Feb-2024 </td>
                                 <td class="text-center">405577</td>
                                 <td class="text-center">2184317804</td>
                                 <td class="fw-bolder fs-5 text-danger text-center"><span class="iconS"><i class="fa-solid fa-plane-departure"></i></span>Emergency</td>
