--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                 <td class="text-center"><span class="fw-bolder">06-Janury-2024</span>  <span class="iconS"><i class=" fa-2xl fa-solid fa-s"></i></span>16-Jan-2024 </td>
                                 <td class="text-center">407344</td>
                                 <td class="text-center">1079836175</td>
-                                <td class="bg-succech text-center"> <span class="iconS"><i class=" fa-2xl fa-solid fa-s"></i></span>Normal</td>
+                                <td class="bg-succech text-center"> <span class="iconS"><i class=" fa-2xl fa-solid fa-s ga-2"></i></span>Normal</td>
                                 <td class="text-center"><span class="iconS m-2"><i class="fa-solid fa-circle-check"></i></span>10 Days</td>
                                 <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/407344.pdf">Download</a></button></td>
 
