--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                                 <td class="text-center"><span class="fw-bolder">16-Janury-2024</span>  <span class="iconS"><i class="fa-solid fa-plane-departure"></i></span> 15-Feb-2024</td>
                                 <td class="text-center">408154</td>
                                 <td class="text-center">2485743385</td>
-                                <td class="fw-bolder fs-5 text-danger
+                                <td class="fw-bolder  text-danger
                                  text-center"><span class="iconS"><i class=" fa-xl fa-solid fa-plane"></i></span> Emergency</td>
                                 <td class="text-center"><span class="iconS m-2"><i class="fa-solid fa-circle-check"></i></span>30 Days</td>
                                 <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/408154.pdf">Download</a></button></td>
@@ -254,7 +254,7 @@
                                 <td class="text-center"><span class="fw-bolder">03-Feb-2024</span>  <span class="iconS"><i class="fa-solid fa-plane-departure"></i></span> 04-Aril-2024 </td>
                                 <td class="text-center">408244</td>
                                 <td class="text-center">2523527030</td>
-                                <td class="fw-bolder fs-5 text-danger text-center"><span class="iconS"><i class=" fa-xl fa-solid fa-plane"></i></span>Emergency</td>
+                                <td class="fw-bolder  text-danger text-center"><span class="iconS"><i class=" fa-xl fa-solid fa-plane"></i></span>Emergency</td>
                                 <td class="text-center"><span class="iconS m-2"><i class="fa-solid fa-circle-check"></i></span>60 Days</td>
                                 <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/408244.pdf">Download</a></button></td>
 
@@ -265,7 +265,7 @@
                                 <td class="text-center"><span class="fw-bolder">03-Feb-2024</span> <span class="iconS"><i class="fa-solid fa-plane-departure"></i></span>23-Feb-2024 </td>
                                 <td class="text-center">405577</td>
                                 <td class="text-center">2184317804</td>
-                                <td class="fw-bolder fs-5 text-danger text-center"><span class="iconS"><i class=" fa-xl fa-solid fa-plane"></i></span>Emergency</td>
+                                <td class="fw-bolder  text-danger text-center"><span class="iconS"><i class=" fa-xl fa-solid fa-plane"></i></span>Emergency</td>
                                 <td class="text-center"><span class="iconS m-2"><i class="fa-solid fa-circle-check"></i>20 Days</td>
                                 <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/405577 (2).pdf">Download</a></button></td>
 
@@ -276,7 +276,7 @@
                                 <td class="text-center"><span class="fw-bolder">03-Feb-2024</span>  <span class="iconS"><i class="fa-solid fa-plane-departure"></i></span> 03-April-2024 </td>
                                 <td class="text-center">407811</td>
                                 <td class="text-center">2519461897</td>
-                                <td class="fw-bolder fs-5 text-danger text-center"><span class="iconS"><i class=" fa-xl fa-solid fa-plane"></i></span>Emergency</td>
+                                <td class="fw-bolder  text-danger text-center"><span class="iconS"><i class=" fa-xl fa-solid fa-plane"></i></span>Emergency</td>
                                 <td class="text-center"><span class="iconS m-2"><i class="fa-solid fa-circle-check"></i></span>30 Days</td>
                                 <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/407811.pdf">Download</a></button></td>
 
