--- a/index.html
+++ b/index.html
@@ -139,6 +139,17 @@
                                 <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/403692 (2).pdf">Download</a></button></td>
 
                             </tr>
+                            <tr>
+                                
+                                <td><span class="iconS m-2"><i class=""></i></span>Ahmed Al-Dossary	</td>
+                                <td class="text-center"><span class="fw-bolder">11-March-2024</span>  <span class="iconS"><i class=" fa-2xl fa-solid fa-s"></i></span> 07-April-2024 </td>
+                                <td class="text-center">403692</td>
+                                <td class="bg-warnig text-center">1008147140</td>
+                                <td class="bg-succech text-center"> <span class="iconS"></span>Normal</td>
+                                <td class="text-center"><span class="iconS m-2"></span>4 Days</td>
+                                <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/403692 (2).pdf">Download</a></button></td>
+
+                            </tr>
 
                             <tr>
                                 <td>Salim Zawayria</td>
