--- a/index.html
+++ b/index.html
@@ -335,8 +335,16 @@
 </script>
 
 
-<footer class="bg-light text-center  m-5 rounded-top-pill  py-5 fst-italic fw-bolder ">
-    &copy; Copy Writing Mahabub_Alam Working (K.F.I.A in Dammam) #4012
+<footer class="bg-black text-center  m- top-pill  py-5 fst-italic fw-bolder ">
+    
+   
+
+    <div class="gap-5 text-green">
+        <i class="fa-2xl fa-solid fa-plane text-white"></i>
+        &copy; Copy Writing Mahabub_Alam Working (K.F.I.A in Dammam) #4012
+        <span class="iconS"><i class=" fa-2xl fa-solid fa-s text-white fw-bolder"></i></span>
+        
+    </div>
 </footer>
   
 </body>
