--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                                 <td class="text-center"><span class="fw-bolder">01-May-2024</span>  <span class="iconS"><i class="fa-solid fa-plane-departure"></i></span> 30-Jun-2024 </td>
                                 <td class="text-center">403484</td>
                                 <td class="text-center">2459481608</td>
-                                <td class="bg-succech text-center"> <span class="iconS"><i class=" fa-xl fa-solid fa-plane"></i></span> Normal</td>
+                                <td class="bg-succech text-center"> <span class="iconS"></span> Normal</td>
                                 <td class="text-center">60 Days</td>
                                 <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/403484.pdf">Download</a></button></td>
 
