--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                             </tr>
                          
                             <tr>
-                                <td>MONAYEM HOSSAN</td>
+                                <td><span class="iconS m-2"><i class="fa-solid fa-circle-check"></i></span>MONAYEM HOSSAN</td>
                                 <td class="text-center"><span class="fw-bolder">10-Feb-2024</span>  <span class="iconS"><i class="fa-solid fa-plane-departure"></i></span> 05-April-2024 </td>
                                 <td class="text-center">405529</td>
                                 <td class="text-center">2493550483</td>
@@ -239,7 +239,7 @@
                             </tr>
 
                             <tr>
-                                <td>MD ABUL HASAN</td>
+                                <td><span class="iconS m-2"><i class="fa-solid fa-circle-check"></i></span>MD ABUL HASAN</td>
                                 <td class="text-center"><span class="fw-bolder">10-Feb-2024</span>  <span class="iconS"><i class="fa-solid fa-plane-departure"></i></span> 05-April-2024 </td>
                                 <td class="text-center">405490</td>
                                 <td class="text-center">2495729424</td>
