--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                 <td class="text-center">401769</td>
                                 <td class="text-center">2396566198</td>
                                 <td class="bg-succech text-center"> <span class=""><i class=" fa-2xl fa-solid fa-plane-slash danger"></i></span> Normal</td>
-                                <td class="text-center"> <span class="iconS m-2"><i class="fa-solid fa-circle-check"></i></span>60 Days</td>
+                                <td class="text-center"> <span class=""><i class=""></i></span>60 Days</td>
                                 <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/401769.pdf">Download</a></button></td>
 
                             </tr>
@@ -233,7 +233,7 @@
                                 <td class="text-center">405529</td>
                                 <td class="text-center">2493550483</td>
                                 <td class="bg-succech text-center"><span class="iconS"><i class=" fa-xl fa-solid fa-plane"></i></span> Normal</td>
-                                <td class="text-center">60 Days</td>
+                                <td class="text-center"><span class="iconS m-2"><i class="fa-solid fa-circle-check"></i></span>60 Days</td>
                                 <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/405529.p">Download</a></button></td>
 
                             </tr>
@@ -244,7 +244,7 @@
                                 <td class="text-center">405490</td>
                                 <td class="text-center">2495729424</td>
                                 <td class="bg-succech text-center"><span class="iconS"><i class=" fa-xl fa-solid fa-plane"></i></span> Normal</td>
-                                <td class="text-center">60 Days</td>
+                                <td class="text-center"><span class="iconS m-2"><i class="fa-solid fa-circle-check"></i></span>60 Days</td>
                                 <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/405490.pdf">Download</a></button></td>
 
                             </tr>
@@ -255,7 +255,7 @@
                                 <td class="text-center bg-danger"><span class="fw-bolder">10-Feb-2024</span>  <span class="iconS"><i class="fa-solid fa-plane-departure"></i></span> 05-April-2024 </td>
                                 <td class="text-center">401822</td>
                                 <td class="text-center">2495725018</td>
-                                <td class="bg-succech text-center"><span class="iconS"><i class=" fa-xl fa-solid fa-plane"></i></span> Normal</td>
+                                <td class="bg-succech text-center"><span class=""><i class=" fa-2xl fa-solid fa-plane-slash danger"></i></span>Normal</td>
                                 <td class="text-center">60 Days</td>
                                 <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/401822.pdf">Download</a></button></td>
 
