--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                                 <td class="text-center"><span class="fw-bolder">11-March-2024</span>  <span class="iconS"><i class=" fa-2xl fa-solid fa-s"></i></span> 07-April-2024 </td>
                                 <td class="text-center">403692</td>
                                 <td class="bg-warnig text-center">1008147140</td>
-                                <td class="bg-succech text-center"> <span class="iconS"><i class="fa-solid fa-circle-check"></i></span>Normal</td>
+                                <td class="bg-succech text-center"> <span class="iconS"></span>Normal</td>
                                 <td class="text-center"><span class="iconS m-2"></span>27 Days</td>
                                 <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/403698.pdf">Download</a></button></td>
 
