--- a/index.html
+++ b/index.html
@@ -250,12 +250,12 @@
                             </tr>
 
                             <tr>
-                                <td ><span class="bg-danger">ROBIUL </span><a href="https://fly4.emirates.com/MAB/MYB/ManageBooking.aspx"> <br >visit-Provlem</a></td>
+                                <td ><span class="iconS m-2"><i class="fa-solid fa-circle-check"></i></span>ROBIUL</span></td>
                                 
-                                <td class="text-center bg-danger"><span class="fw-bolder">10-Feb-2024</span>  <span class="iconS"><i class="fa-solid fa-plane-departure"></i></span> 05-April-2024 </td>
+                                <td class="text-center"><span class="fw-bolder"><span class="fw-bolder">12-Feb-2024</span>  <span class="iconS"><i class="fa-solid fa-plane-departure"></i></span> 05-April-2024 </td>
                                 <td class="text-center">401822</td>
                                 <td class="text-center">2495725018</td>
-                                <td class="bg-succech text-center"><span class=""><i class=" fa-2xl fa-solid fa-plane-slash danger"></i></span>Normal</td>
+                                <td class="bg-succech text-center"><span class=""><i class=" fa-2xl "></i></span>Normal</td>
                                 <td class="text-center">60 Days</td>
                                 <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/401822.pdf">Download</a></button></td>
 
