--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                                 <td class="text-center"><span class="fw-bolder"><span class="fw-bolder">12-Feb-2024</span>  <span class="iconS"><i class="fa-solid fa-plane-departure"></i></span> 05-April-2024 </td>
                                 <td class="text-center">401822</td>
                                 <td class="text-center">2495725018</td>
-                                <td class="bg-succech text-center"><span class=""><i class=" fa-2xl "></i></span>Normal</td>
+                                <td class="bg-succech text-center"><span class="iconS"><i class=" fa-xl fa-solid fa-plane"></i></span>Normal</td>
                                 <td class="text-center">60 Days</td>
                                 <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/401822.pdf">Download</a></button></td>
 
