--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                                 <td class="text-center">401822</td>
                                 <td class="text-center">2495725018</td>
                                 <td class="bg-succech text-center"><span class="iconS"><i class=" fa-xl fa-solid fa-plane"></i></span>Normal</td>
-                                <td class="text-center">60 Days</td>
+                                <td class="text-center"> <span class="iconS m-2"><i class="fa-solid fa-circle-check"></i></span>60 Days</td>
                                 <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/401822.pdf">Download</a></button></td>
 
                             </tr>
