--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
 
                     <table id="example" class="table table-border-red table-hover ">
                         <thead class="bg-primary-sublit table-border-red">
-                            <tr class="text-capitalize
-                            ">
+                            <tr class="text-capitalize"></tr>
                                 <th class="text-bg-info bs-info-bg-subtle fw-bolder text-center"><h5>Name</h5></th>
                                 <th class="fw-bolder text-center text-white bg-success "><h5>Leve-Date & Come-Back-Date</h5></th> 
                                 
