--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                 <td class="text-center">407344</td>
                                 <td class="text-center">1079836175</td>
                                 <td class=""> <span class="iconS"><i class=""></i></span>Normal</td>
-                                <td class="text-center"><span class="iconS m-2"><i class=""></i></span>10 Days</td>
+                                <td class="text-center"><span class="iconS m-2"><i class="fa-solid fa-circle-check"></i></span>27 Days</td>
                                 <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/407344).pdf">Download</a></button></td>
 
                             </tr>
