--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                             <tr>
                         
                                 <td> <span class="iconS m-2"><i class=></i></span>Hassan Ahmed AlZahrani</td>
-                                <td class=""><span class="fw-bolder">11-March-2024</span>  <span class="iconS"><i class=""></i></span>07-April-2024 </td>
+                                <td class=""><span class="fw-bolder">11-March-2024</span>  <span class="iconS"><i class="fa-solid fa-plane-departure"></i></span>07-April-2024 </td>
                                 <td class="text-center">407344</td>
                                 <td class="text-center">1079836175</td>
                                 <td class=""> <span class="iconS"><i class=""></i></span>Normal</td>
@@ -108,7 +108,7 @@
                                 <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/407344).pdf">Download</a></button></td>
 
                             </tr>
-                            
+
                             <tr>
                                 <td><span class="bg-danger">Coyle Kay </span><br> <a href="./Vacation File-2024/coyel.png">visit-Provlem</a></td>
                                 <td class="text-center bg-danger"><span class="fw-bolder">08-Feb-2024</span><span class="iconS"><i class="fa-solid fa-plane-departure"></i></span> 03-April-2024 </td>
