adding new employe

--- a/index.html
+++ b/index.html
@@ -328,6 +328,16 @@
                                 <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/407811.pdf">Download</a></button></td>
 
                             </tr>
+                            <tr>
+                                <td><span > </span>MOHAMMAD SOHEL</td>
+                                <td class="text-center"><span class="fw-bolder">01-Jun-2024</span>  <span class="iconS"><i class="fa-solid fa-plane-departure"></i></span> 31-Jul-2024 </td>
+                                <td class="text-center">405394</td>
+                                <td class="text-center">2496673779</td>
+                                <td class="fw-bolder  text-center"><span class="iconS"></i></span>Normal</td>
+                                <td class="text-center"><span class="iconS m-2"></i></span>60 Days</td>
+                                <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/407811.pdf">Download</a></button></td>
+
+                            </tr>
                          
                         
 
