--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                                 <td class="text-center">249523948</td>
                                 <td class="fw-bolder  text-center"><span class="iconS"></i></span>Normal</td>
                                 <td class="text-center"><span class="iconS m-2"></i></span>60 Days</td>
-                                <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/407811.pdf">Download</a></button></td>
+                                <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/.pdf">Download</a></button></td>
 
                             </tr>
                             <tr>
@@ -335,7 +335,7 @@
                                 <td class="text-center">2496673779</td>
                                 <td class="fw-bolder  text-center"><span class="iconS"></i></span>Normal</td>
                                 <td class="text-center"><span class="iconS m-2"></i></span>60 Days</td>
-                                <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/407811.pdf">Download</a></button></td>
+                                <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/.pdf">Download</a></button></td>
 
                             </tr>
                          
