--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
                             </tr>
 
                             <tr>
-                                <td><span class="bg-danger">Coyle Kay </span><br> <a href="./Vacation File-2024/coyel.png">visit-Provlem</a></td>
-                                <td class="text-center bg-danger"><span class="fw-bolder">08-Feb-2024</span><span class="iconS"><i class="fa-solid fa-plane-departure"></i></span> 03-April-2024 </td>
+                                <td><span class="iconS"> <i class="fa-solid fa-circle-check"></i></span> Coyle Kay</td>
+                                <td class="text-center"><span class="fw-bolder">12-Feb-2024</span><span class="iconS"><i class="fa-solid fa-plane-departure"></i></span> 03-April-2024 </td>
                                 <td class="text-center">401769</td>
                                 <td class="text-center">2396566198</td>
-                                <td class="bg-succech text-center"> <span class=""><i class=" fa-2xl fa-solid fa-plane-slash danger"></i></span> Normal</td>
-                                <td class="text-center"> <span class=""><i class=""></i></span>60 Days</td>
+                                <td class="bg-succech text-center"> <span class="iconS"><i class=" fa-xl fa-solid fa-plane"></i></span> Normal</td>
+                                <td class="text-center"> <span class="iconS"><i class="fa-solid fa-circle-check"></i></span>60 Days</td>
                                 <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/401769.pdf">Download</a></button></td>
 
                             </tr>
