--- a/index.html
+++ b/index.html
@@ -166,13 +166,13 @@
                             </tr>
 
                             <tr>
-                                <td>Salim Zawayria  </td>
+                                <td> <span class="iconS m-2"><i class="fa-solid fa-circle-check"></i></span> Salim Zawayria  </td>
                                 <td class="text-center"><span class="fw-bolder">01-Feb-2024</span>  <span class="iconS"><i class=" fa-2xl fa-solid fa-s"></i></span> 16-Feb-2024 </td>
                                 <td class="text-center">406699</td>
                                 <td class="text-center">1097113474</td>
                                 <td class="bg-succech text-center"> <span class="iconS"><i class=" fa-2xl fa-solid fa-s"></i></span> Normal</td>
-                                <td class="text-center">15 Days</td>
-                                <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/406699.pdf">Download</a></button></td>
+                                <td class="text-center"> <span class="iconS m-2"><i class="fa-solid fa-circle-check"></i></span>15 Days</td>
+                                <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/407699.pdf">Download</a></button></td>
 
                             </tr>
                             <tr>
