--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
                                 <td class="text-center"><span class="fw-bolder">11-March-2024</span>  <span class="iconS"><i class="fa-solid fa-plane-departure"></i></span>07-April-2024 </td>
                                 <td class="text-center">407344</td>
                                 <td class="text-center">1079836175</td>
-                                <td class=""> <span class="iconS"><i class=""></i></span>Normal</td>
+                                <td class="text-center"> <span class="iconS"><i class=""></i></span>Normal</td>
                                 <td class="text-center"><span class="iconS m-2"><i class=""></i></span>27 Days</td>
-                                <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/407344).pdf">Download</a></button></td>
+                                <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/407344.pdf">Download</a></button></td>
 
                             </tr>
 
