--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
                             <tr>
                             
-                                <td>Lal Miah Messer	</td>
+                                <td>Lal Miah Messer ! <span class="badge-secondary text-danger fw-bolder">New</span>	</td>
                                 <td class="text-center"><span class="fw-bolder">15-FEB-2024</span><span class="iconS"><i class="fa-solid fa-plane-departure"></i></span> 16-April-2024 </td>
                                 <td class="text-center">401814</td>
                                 <td class="text-center">2237342916</td>
