--- a/index.html
+++ b/index.html
@@ -345,6 +345,16 @@
                                 <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/405394.pdf">Download</a></button></td>
 
                             </tr>
+                            <tr>
+                                <td><span > </span>Ashraf Ahmed Abdulhadi ! <span class="badge-secondary text-danger fw-bolder">New</span></td>
+                                <td class="text-center"><span class="fw-bolder">01-April-2024</span>  <span class="iconS"><i class="fa-solid fa-plane-departure"></i></span> 09-April-2024 </td>
+                                <td class="text-center">405721</td>
+                                <td class="text-center">2420562395</td>
+                                <td class="fw-bolder  text-center text-danger"><span class="iconS"></i></span>Emergency</td>
+                                <td class="text-center"><span class="iconS m-2"></i></span>08 Day</td>
+                                <td><button class="btn btn-outline-warning"><a href="./Vacation File">Download</a></button></td>
+
+                            </tr>
                             <!-- <div>
                                 <h2 class="card-title">
                                     Shoes!
