adidng salman ali

--- a/index.html
+++ b/index.html
@@ -355,6 +355,22 @@
                                 <td><button class="btn btn-outline-warning"><a href="./Vacation File">Download</a></button></td>
 
                             </tr>
+                            <tr>
+                                
+                                <td> <span class="iconS m-2"><i class=""></i></span>SALMAN BIN ALI ! <span class="badge-secondary text-danger fw-bolder">New</span>	</td>
+                                <td class="text-center"><span class="fw-bolder">11-March-2024</span> <span class="iconS"><i class=" fa-2xl fa-solid fa-s"></i></span>03-April-2024 </td>
+                                <td class="text-center">401726</td>
+                                <td class="text-center">1060806096</td>
+                                <td class="bg-succech text-center" > <span class="iconS"><i class=" fa-2xl fa-solid fa-s"></i></span>Normal</td>
+                                <td class="text-center bg-primare"><span class="iconS m-2"><i class=""></i></span>23 Days</td>
+                                <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/401726.pdf">Download</a></button></td>
+
+                            </tr>
+
+
+
+
+
                             <!-- <div>
                                 <h2 class="card-title">
                                     Shoes!
