--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                                 <td class="text-center"><span class="fw-bolder">10-March-2024</span> <span class="iconS"><i class="fa-solid fa-plane-departure"></i></span>30-March-2024 </td>
                                 <td class="text-center">406431</td>
                                 <td class="text-center">2496616422</td>
-                                <td class="fw-bolder  text-danger text-center"><span class="iconS"><i class=" fa-xl fa-solid fa-plane"></i></span>Emergency</td>
+                                <td class="fw-bolder  text-danger text-center"><span class="iconS"><i class=" "></i></span>Emergency</td>
                                 <td class="text-center"><span class="iconS m-2"><i> </i>20 Days</td>
                                 <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/406431.pdf">Download</a></button></td>
 
