--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
                             <tr>
                             
                                 <td>Lal Miah Messer ! <span class="badge-secondary text-danger fw-bolder">New</span></td>
-                                <td class="text-center"><span class="fw-bolder">15-FEB-2024</span><span class="iconS"><i class="fa-solid fa-plane-departure"></i></span> 16-April-2024 </td>
+                                <td class="text-center"><span class="fw-bolder">05-March-2024</span><span class="iconS"><i class="fa-solid fa-plane-departure"></i></span>29-April-2024</td>
                                 <td class="text-center">401814</td>
                                 <td class="text-center">2237342916</td>
-                                <td class="bg-succech text-center">  Normal</td>
-                                <td class="text-center"> 60 Days</td>
-                                <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/401814.pdf">Download</a></button></td>
+                                <td class="bg-succech text-center">Normal</td>
+                                <td class="text-center">55 Days</td>
+                                <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/401814_merged.pdf">Download</a></button></td>
 
                             </tr>
 
