--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
 
                             <tr>
                             
-                                <td>Lal Miah Messer ! <span class="badge-secondary text-danger fw-bolder">New</span></td>
+                                <td><span class="iconS m-2"><i class="fa-solid fa-circle-check"></i>Lal Miah Messer </td>
                                 <td class="text-center"><span class="fw-bolder">05-March-2024</span><span class="iconS"><i class="fa-solid fa-plane-departure"></i></span>29-April-2024</td>
                                 <td class="text-center">401814</td>
                                 <td class="text-center">2237342916</td>
-                                <td class="bg-succech text-center">Normal</td>
-                                <td class="text-center">55 Days</td>
+                                <td class="bg-succech text-center"> <span class="iconS"><i class=" fa-xl fa-solid fa-plane"></i></span></span>Normal</td>
+                                <td class="text-center"> <span class="iconS m-2"><i class="fa-solid fa-circle-check"></i>55 Days</td>
                                 <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/401814_merged.pdf">Download</a></button></td>
 
                             </tr>
