--- a/index.html
+++ b/index.html
@@ -378,6 +378,17 @@
 
                             </tr>
 
+                            <tr>
+                        
+                                <td> <span class="iconS m-2"><i class="fa-solid fa-circle-check"></i></span>Reda Abdelmaged Mohammad Ibrahim</td>
+                                <td class="text-center"><span class="fw-bolder">06-March-2024</span> <span class="iconS"><i class="fa-solid fa-plane-departure"></i></span> 01-May-2024</td>
+                                <td class="text-center">405972</td>
+                                <td class="text-center">2503732816</td>
+                                <td class="bg-succech text-center bg-green" > <span class="iconS"><i class=" fa-xl fa-solid fa-plane"></i></span></span> Normal</td>
+                                <td class="text-center"><span class="iconS m-2"><i class="fa-solid fa-circle-check"></i>56 Days</td>
+                                <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/405972.pdf">Download</a></button></td>
+                            </tr>
+
 
 
 
