--- a/index.html
+++ b/index.html
@@ -148,12 +148,12 @@
 
                             <tr>
                                 
-                                <td><span class="iconS m-2"><i class=""></i></span>Ahmed Al-Dossary  ! <span class="badge-secondary text-danger fw-bolder">New</span>	</td>
+                                <td><span class="iconS m-2"><i class="fa-solid fa-circle-check"></i></span>Ahmed Al-Dossary  	</td>
                                 <td class="text-center"><span class="fw-bolder">11-March-2024</span>  <span class="iconS"><i class=" fa-2xl fa-solid fa-s"></i></span> 07-April-2024 </td>
                                 <td class="text-center">403692</td>
                                 <td class="bg-warnig text-center">1008147140</td>
-                                <td class="bg-succech text-center"> <span class="iconS"></span>Normal</td>
-                                <td class="text-center"><span class="iconS m-2"></span>27 Days</td>
+                                <td class="bg-succech text-center"> <span class="iconS"><i class=" fa-2xl fa-solid fa-s"></i></span>Normal</td>
+                                <td class="text-center"><span class="iconS m-2"><i class="fa-solid fa-circle-check"></i></span>27 Days</td>
                                 <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/403698.pdf">Download</a></button></td>
 
                             </tr>
@@ -368,12 +368,12 @@
                             </tr>
 
                             <tr>
-                                <td><span class="iconS m-2"><i class="fa-solid "></i></span>SHARIF MIAH	 ! <span class="badge-secondary text-danger fw-bolder">New</span></td>
+                                <td><span class="iconS m-2"><i class="fa-solid fa-circle-check"></i></span> SHARIF MIAH	 </td>
                                 <td class="text-center"><span class="fw-bolder">10-March-2024</span> <span class="iconS"><i class="fa-solid fa-plane-departure"></i></span>30-March-2024 </td>
                                 <td class="text-center">406431</td>
                                 <td class="text-center">2496616422</td>
-                                <td class="fw-bolder  text-danger text-center"><span class="iconS"><i class=" "></i></span>Emergency</td>
-                                <td class="text-center"><span class="iconS m-2"><i> </i>20 Days</td>
+                                <td class="fw-bolder  text-danger text-center"> <span class="iconS"><i class=" fa-xl fa-solid fa-plane"></i></span>Emergency</td>
+                                <td class="text-center"><span class="iconS m-2"><i class="fa-solid fa-circle-check"></i> </i>20 Days</td>
                                 <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/406431.pdf">Download</a></button></td>
 
                             </tr>
