aading somr file

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
                             <tr>
                                 
-                                <td><span class="iconS m-2"><i class="fa-solid fa-circle-check"></i></span>Ahmed Al-Dossary  	</td>
+                                <td><span class="iconS m-2"><i class="fa-solid fa-circle-check"></i></span>Ahmed Al-Dossary</td>
                                 <td class="text-center"><span class="fw-bolder">11-March-2024</span>  <span class="iconS"><i class=" fa-2xl fa-solid fa-s"></i></span> 07-April-2024 </td>
                                 <td class="text-center">403692</td>
                                 <td class="bg-warnig text-center">1008147140</td>
@@ -357,12 +357,12 @@
                             </tr>
                             <tr>
                                 
-                                <td> <span class="iconS m-2"><i class=""></i></span>SALMAN BIN ALI ! <span class="badge-secondary text-danger fw-bolder">New</span>	</td>
+                                <td> <span class="iconS m-2"><i class="fa-solid fa-circle-check"></i></span>SALMAN BIN ALI 	</td>
                                 <td class="text-center"><span class="fw-bolder">11-March-2024</span> <span class="iconS"><i class=" fa-2xl fa-solid fa-s"></i></span>03-April-2024 </td>
                                 <td class="text-center">401726</td>
                                 <td class="text-center">1060806096</td>
                                 <td class="bg-succech text-center" > <span class="iconS"><i class=" fa-2xl fa-solid fa-s"></i></span>Normal</td>
-                                <td class="text-center bg-primare"><span class="iconS m-2"><i class=""></i></span>23 Days</td>
+                                <td class="text-center bg-primare"><span class="iconS m-2"><i class="fa-solid fa-circle-check"></i></span>23 Days</td>
                                 <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/401726.pdf">Download</a></button></td>
 
                             </tr>
@@ -387,6 +387,17 @@
                                 <td class="bg-succech text-center bg-green" > <span class="iconS"><i class=" fa-xl fa-solid fa-plane"></i></span></span> Normal</td>
                                 <td class="text-center"><span class="iconS m-2"><i class="fa-solid fa-circle-check"></i>56 Days</td>
                                 <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/405972.pdf">Download</a></button></td>
+                            </tr>
+
+                            <tr>
+                                <td>Fawaz Mubarak  ! <span class="badge-secondary text-danger fw-bolder">New</span></td>
+                                <td class="text-center"><span class="fw-bolder">27-Mar-2024</span>  <span class="iconS"><i class=" fa-2xl fa-solid fa-s"></i></span>09-April-2024</td>
+                                <td class="text-center">401732</td>
+                                <td class="text-center">1010686366</td>
+                                <td class="bg-succech text-center"> <span class="iconS"></span> Normal</td>
+                                <td class="text-center">13 Days</td>
+                                <td><button class="btn btn-outline-warning"><a href=".">Download</a></button></td>
+
                             </tr>
 
 
