--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                                 <td class="text-center">1010686366</td>
                                 <td class="bg-succech text-center"> <span class="iconS"></span> Normal</td>
                                 <td class="text-center">13 Days</td>
-                                <td><button class="btn btn-outline-warning"><a href=".">Download</a></button></td>
+                                <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/401732.pdf">Download</a></button></td>
 
                             </tr>
 
