--- a/index.html
+++ b/index.html
@@ -137,12 +137,12 @@
                             <tr>
                                 
                                 <td><span class="iconS m-2"><i class="fa-solid fa-circle-check"></i></span>zhara</td>
-                                <td class="text-center"><span class="fw-bolder">24-Janury-2024</span>  <span class="iconS"><i class=" fa-2xl fa-solid fa-s"></i></span> 28-January-2024 </td>
+                                <td class="text-center"><span class="fw-bolder">15-April-2024</span>  <span class="iconS"><i class=" fa-2xl fa-solid fa-s"></i></span> 24-April-2024 </td>
                                 <td class="text-center">403692</td>
                                 <td class="bg-warnig text-center">1008147140</td>
                                 <td class="bg-succech text-center"> <span class="iconS"><i class=" fa-2xl fa-solid fa-s"></i></span>Normal</td>
-                                <td class="text-center"><span class="iconS m-2"><i class="fa-solid fa-circle-check"></i></span>4 Days</td>
-                                <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/403692 (2).pdf">Download</a></button></td>
+                                <td class="text-center"><span class="iconS m-2"><i class="fa-solid fa-circle-check"></i></span> 09 Days</td>
+                                <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/403692 (3).pdf">Download</a></button></td>
 
                             </tr>
 
@@ -346,12 +346,12 @@
 
                             </tr>
                             <tr>
-                                <td><span > </span>Ashraf Ahmed Abdulhadi ! <span class="badge-secondary text-danger fw-bolder">New</span></td>
+                                <td><span class="iconS m-2"><i class="fa-solid fa-circle-check"></i>Ashraf Ahmed Abdulhadi </td>
                                 <td class="text-center"><span class="fw-bolder">01-April-2024</span>  <span class="iconS"><i class="fa-solid fa-plane-departure"></i></span> 09-April-2024 </td>
                                 <td class="text-center">405721</td>
                                 <td class="text-center">2420562395</td>
-                                <td class="fw-bolder  text-center text-danger"><span class="iconS"></i></span>Emergency</td>
-                                <td class="text-center"><span class="iconS m-2"></i></span>08 Day</td>
+                                <td class="fw-bolder  text-center text-danger"><span class="iconS"><i class=" fa-xl fa-solid fa-plane"></i></span></i></span>Emergency</td>
+                                <td class="text-center"><span class="iconS m-2"><i class="fa-solid fa-circle-check"></i></span> 08 Day</td>
                                 <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/405721.pdf">Download</a></button></td>
 
                             </tr>
