--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
 <body>
     <header class="header_part">
         <!-- <img src="./image.png" alt="" class="img-fluid"> -->
-        <h2><span class="icon m-5 size-50"><i class=" fa-2xl fa-solid fa-plane-up"></i></span></a>VACATION</i> KING FAHD INTERATIONAL AIRPORT PROJECT #4012 .</h2>
+        <Marquee>
+            <h2><span class="icon m-5 size-50"><i class=" fa-2xl fa-solid fa-plane-up"></i></span></a>VACATION</i> KING FAHD INTERATIONAL AIRPORT PROJECT #4012 .</h2>
+          </Marquee>
+       
 
     </header>
     <div class="bg-primary-sublit">
